[package]
name = "bluekeyslistener"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "*"
eyre = "*"
tracing = "*"
tracing-subscriber = "0.2"
is-terminal = "*"
toml = "*"
inotify = "*"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.input-linux]
git = "https://github.com/lilydjwg/input-linux-rs"
version = "*"

[profile.release]
lto = true
