[package]
name = "bluekeyslistener"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }
toml = "*"
inotify = "*"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.input-linux]
git = "https://github.com/lilydjwg/input-linux-rs"
version = "*"

[profile.release]
lto = true
